Use Files.readString instead of converting raw bytes